# sdk-python

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  testing.yml  trivy.yml
examples/: 01_user_login.py  02_client_credentials.py  03_fastapi_server.py  04_async_login.py
src/authgate/: __init__.py  exceptions.py
src/authgate/authflow/: __init__.py  authcode.py  device.py  token_source.py
src/authgate/clientcreds/: __init__.py  token_source.py  transport.py
src/authgate/credstore/: __init__.py  codecs.py  file_store.py  keyring_store.py  secure_store.py
src/authgate/discovery/: __init__.py  async_client.py  client.py  models.py
src/authgate/middleware/: __init__.py  core.py  django.py  fastapi.py  flask.py
src/authgate/oauth/: __init__.py  _parsing.py  async_client.py  client.py  models.py
tests/: conftest.py  test_authflow.py  test_clientcreds.py  test_credstore.py  test_discovery.py  test_middleware.py  test_oauth.py
